--- a/views/index.html
+++ b/views/index.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <script src="vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="scripts/client.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/stylesheet.css">
-    <title>Order History App</title>
-  </head>
-  <body>
-    <div class="container-fluid">
+<head>
+  <meta charset="utf-8">
+  <script src="vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
+  <script src="scripts/client.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style/stylesheet.css">
+  <title>Order History App</title>
+</head>
+<body>
+  <div class="container-fluid">
 
-       <h1>Order History App</h1>
+    <h1>Order History Application</h1>
 
-       <div class="row">
+    <div class="row">
 
-         <div class="col-md-4">
-            <h3>Clients</h3>
-            <div class="clientBox">
-              <ul class="clientList">
-              </ul>
-            </div>
+      <div class="col-md-4">
+        <div class="clientBox">
+          <h3>Clients</h3>
+
+          <ul class="list-unstyled" id="clientList">
+
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-8">
+        <div class="orderBox">
+          <h3>Order Information</h3>
+          <div id="table">
+            <table id='myTable' class='table-bordered'>
+
+              <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Order Number</th>
+                <th>Unit Price</th>
+                <th>Quantity</th>
+                <th>Address</th>
+              </tr>
+
+            </table>
           </div>
 
-         <div class="col-md-8">
-          </div>
-
-       </div>
-
-     </div>
-  </body>
-</html>
+        </div>
+      </body>
+      </html>
